# INTEHCOM

./: CMakeLists.txt  README.md  addpartieswindow.cpp  addpartieswindow.h  addpartieswindow.ui  addrulewindow.cpp  addrulewindow.h  addrulewindow.ui  addsorts.cpp  addsorts.h  addsorts.ui  addworker.cpp  addworker.h  addworker.ui  autosortwindow.cpp  autosortwindow.h  autosortwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  partieswindow.cpp  partieswindow.h  partieswindow.ui  pocketswindow.cpp  pocketswindow.h  pocketswindow.ui  referenceswindow.cpp  referenceswindow.h  referenceswindow.ui  settingbuttonswindow.cpp  settingbuttonswindow.h  settingbuttonswindow.ui  settinglinewindow.cpp  settinglinewindow.h  settinglinewindow.ui  settingprocessingwindow.cpp  settingprocessingwindow.h  settingprocessingwindow.ui  settingswindow.cpp  settingswindow.h  (+7 more)
